Added experience translations e simplified listings

--- a/popup.html
+++ b/popup.html
@@ -20,11 +20,11 @@
                 <label for="experienceLevel">Nível*:</label>
                 <select id="experienceLevel">
                     <option value="">Selecione</option>
-                    <option value="estagio">Estágio</option>
+                    <option value="estágio">Estágio</option>
                     <option value="trainee">Trainee</option>
                     <option value="junior">Júnior</option>
                     <option value="pleno">Pleno</option>
-                    <option value="senior">Sênior</option>
+                    <option value="sênior">Sênior</option>
                 </select>
             </div>
 
@@ -44,15 +44,22 @@
                 </select>
             </div>
 
-            <div class="input-group">
+            <div class="check-group">
                 <label for="remote">
                     <input type="checkbox" id="remote"> Apenas Remoto
+                </label>
+            </div>
+
+            <div class="check-group">
+                <label for="remote">
+                    <input type="checkbox" id="simplificada"> Candidatura Simplificada
                 </label>
             </div>
 
             <button id="searchButton">Pesquisar</button>
             <br>
             <a class="signature" href="https://www.linkedin.com/in/caiomdc" target=”_blank”>written by Caio Carvalho💻</a>
+            <a class="signature" href="https://buymeacoffee.com/caiomoreiradc" target="_blank">buymeacoffee☕</a>
        
         </div>
     </div>
