--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,14 @@
             <h3>Buscar no Linkedin💼</h3>
 
             <div class="input-group">
+                <label for="searchType">Tipo*:</label>
+                <select id="searchType">
+                    <option value="vagas">Vagas</option>
+                    <option value="candidatos">Candidatos</option>
+                </select>
+            </div>
+
+            <div class="input-group">
                 <label for="jobTitle">Cargo*:</label>
                 <input type="text" id="jobTitle" placeholder="Desenvolvedor, Analista de Sistemas">
             </div>
